<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="main">ContactManager main Activity!</string>
    <string name="app_name">唐亚光ContactManager</string>
    <string name="edit_contact">编辑联系人</string>
    <string name="contact_detail">联系人详细信息</string>
    <string name="label_first_name">名字</string>
    <string name="label_last_name">姓氏</string>
    <string name="label_phone">电话</string>
    <string name="label_email">邮件</string>
    <string name="label_weibo">新浪微博</string>
    <string name="label_qq">QQ</string>
    <string name="label_msn">MSN</string>
    <string name="label_organization">单位</string>
    <string name="label_address">地址</string>
    <string name="label_department">部门</string>
    <string name="label_position">职务</string>
    <string name="label_note">备注</string>

    <string name="menu_add_contact">添加联系人</string>
    <string name="menu_call_contact">呼叫</string>
    <string name="menu_sms_contact">发送短信</string>
    <string name="menu_mail_contact">发送邮件</string>
    <string name="menu_weibo_contact">访问微博</string>
    <string name="menu_export_contact">导出联系人</string>
    <string name="menu_import_contact">导入联系人</string>

    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="error">错误</string>
    <string name="Continue">继续</string>
    <string name="spinner_select_label">选择电话类型</string>
    <string name="undefined_phone_type_label">(未定义)</string>
    
    <string name="msg_contact_create_failture">创建联系人失败</string>
    <string name="msg_contact_deleted">联系人已删除</string>
    <string name="dialog_null_contact_name">名字和姓氏不能全部为空</string>
    <string name="select_export_dir_title">选择导出文件的目录</string>
    <string name="select_import_file_title">选择要导入的文件</string>
    <string name="bad_sdcard">SD卡错误</string>
    <string name="open_import_file_error">打开导入文件错误</string>
    <string name="success_exported">导出联系人成功</string>
    <string name="success_imported">导入联系人成功</string>
</resources>
